--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "BAND Member Extrator",
+  "name": "BAND Member Extrator V2",
   "description": "손쉽게 랜덤으로 태그하세요!",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "author": "Doyeon Guk",
   "manifest_version": 3,
   "icons": {
